<resources>
    <string name="app_name">Júlia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_permission_title">Permissão</string>
    <string name="dialog_permission_imei">Precisamos da permissão a seguir para enviar novidades do aplicativo da júlia para este celular.</string>
    <string name="dialos_permission_imei_denied">
        <![CDATA[
        Você negou a permissão de <b>Telefone</b>,
        precisamos dessa permissão para enviar novidades do aplicativo da júlia.
        <b>Por favor, na tela seguinte, vá para permissões e permita.</b>
        ]]>
    </string>
    <string name="dialog_permission_ok">ENTENDI</string>
    <string name="header_hello">Olá, Priscila!</string>
    <string name="header_hello_username">Olá, %s</string>
    <string name="inicio_boas_vindas1">Eu sou a Júlia, assistente virtual</string>
    <string name="inicio_boas_vindas2">para vendedores da Unilever</string>
    <string name="edittext_chat_hint">Envie uma mensagem</string>
    <string name="julia_chat_msg">Estou aqui para te ajudar com as seguintes informações:</string>
    <string name="status_do_pedido">Status do Pedido</string>
    <string name="agenda">Agenda</string>
    <string name="julia_chat_button_items">
        <![CDATA[
        [
        {\"icon\":\"e90f\", \"color\": \"00A9E0\", \"text\": \"Status do Pedido\"},
        {\"icon\":\"e90a\", \"color\": \"00A9E0\", \"text\": \"Inovação\"},
        {\"icon\":\"e900\", \"color\": \"00A9E0\", \"text\": \"Agenda\"}
        ]
        ]]>
    </string>
    <string name="regras_ouro">Regras de Ouro</string>
    <string name="publico_alvo">CRM Público Alvo</string>
    <string name="tradestory">Tradestory</string>
    <string name="material_visibilidade">Material visibilidade</string>
    <string name="ficha_cadastral">Ficha cadastral</string>
    <string name="skus_deslistados">SKUs delistados</string>
    <string name="html_text">
        <![CDATA[
        This is normal text. <font color=red>This is a red text</font>
        ]]>
    </string>
    <string name="big_text">
        <![CDATA[
        Melhor não… Afinal, isso vai contra o <b>Código de Princípios de Negócios da Unilever</b>. Você pode ler mais sobre ele no botão abaixo:
        ]]>
    </string>
    <string name="loren_big_text">
        <![CDATA[
        What is Lorem Ipsum?
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.

        Where does it come from?
        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
        ]]>
    </string>
    <string name="loren_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="lancamento">Lançamento</string>
    <string name="data_lancamento">01/09/2018</string>
    <string name="nome_projeto">Seda Shoko</string>
    <string name="canal">Canal</string>
    <string name="canais">Canais</string>
    <string name="todos">Todos</string>
    <string name="beneficio_esperado">Benefício esperado</string>
    <string name="content_item">Content Item</string>
    <string name="data_agenda">07/02/2019</string>
    <string name="julia_text_evento">Me lembre de fazer amanhã</string>
    <string name="agenda_local">Pão de Açúcar</string>
    <string name="julia_agenda_aviso">É pra já! Seus compromissos para essa semana são:</string>
    <string name="faturado">Faturado</string>
    <string name="pendente">Pendente</string>
    <string name="anulado">Anulado</string>
    <string name="pao_acucar">PÃO DE AÇUCAR</string>
    <string name="pao_acucar2">Pão de Açúcar123456pamoema Açúcar123456pamoema</string>
    <string name="valor_pedido">R$ 2.000,00</string>
    <string name="caixas">caixas</string>
    <string name="caixa">caixa</string>
    <string name="julia_status_pedido_text">Confira os status do pedido que você solicitou:</string>
    <string name="produto">Produto</string>
    <string name="produtos">Produtos</string>
    <string name="status_detalhe_produto">Omo</string>
    <string name="sair">Sair</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="voz">Voz</string>
    <string name="avisos_outlook">Avisos do Outlook</string>
    <string name="avisos_ipv">Avisos de IPV</string>
    <string name="menu">Menu</string>
    <string name="configuracoes">Configurações</string>
    <string name="notificacoes">Notificações</string>
    <string name="notificacoes_detalhe">Notificações / Detalhe</string>
    <string name="novidades">Novidades</string>
    <string name="novidades_lidas">Novidades lidas</string>
    <string name="entrar">Entrar</string>
    <string name="login_error">Erro ocorrido ao efetuar o login, tente novamente.</string>
    <string name="login_cancel">Login cancelado.</string>
    <string name="ola">Olá,</string>
    <string name="priscila">Priscila</string>
    <string name="voltar">voltar</string>
    <string name="entendi">ENTENDI</string>
    <string name="text_copy_paste">texto copiado</string>
    <string name="error_padrao">Desculpe, não consegui entender, Vamos tentar de novo? Reformule sua pergunta em poucas palavras, eu estou aprendendo sobre o mundo de vocês, humanos, ainda…</string>
    <string name="error_sem_internet"><b>Eita!</b> Parece que você não está conectado à internet, confira suas configurações de rede wi-fi ou dados móveis e tente novamente.</string>
    <string name="error_timeout">Desculpe, tive um probleminha, pode repetir?</string>
    <string name="testar_avaliacao">Testar a avaliação</string>
    <string name="lembrete_julia">Lembrete Julia</string>
    <string name="concluir">Concluir</string>
    <string name="agenda_concluir_evento">Deseja realmente concluir este compromisso?</string>
    <string name="agenda_cancelar_evento">Deseja realmente cancelar este compromisso?</string>
    <string name="agenda_excluir_evento">Realmente deseja excluir este evento da sua agenda?</string>
    <string name="dialog_nao">Não</string>
    <string name="dialog_sim">Sim</string>
    <string name="dialog_enviando">enviando…</string>
    <string name="pc">PC</string>
    <string name="clique_para_ver">Clique para ver</string>
    <string name="pedidos_do_cliente">Pedidos do cliente</string>
    <string name="clique_para_ver_detalhes">Clique para ver os detalhes</string>
    <string name="num_fatura">N.º Fatura</string>
    <string name="num_transport">N.ºTransp</string>
    <string name="faturado_em">Faturado em</string>
    <string name="caixas_title">Caixas</string>
    <string name="transporte">Transporte</string>
    <string name="existem_transportes">Existem transportes agendados</string>
    <string name="data_saida">Data saída</string>
    <string name="escolher_periodo">Escolher o período</string>
    <string name="limpar_tudo">Limpar tudo</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="de">De</string>
    <string name="selecione_o_intervalo">Selecione o intervalo:</string>
    <string name="traco">-</string>
    <string name="ate">Até</string>
    <string name="rs_money">R$</string>
    <string name="minimo">Mínimo</string>
    <string name="maximo">Máximo</string>
    <string name="_0_00">0,00</string>
    <string name="valor_minimo_maximo">Valor Mínimo - Máximo</string>
    <string name="valores_error_minimo">valor maior que o valor máximo</string>
    <string name="valores_error_maximo">valor menor que o valor mínimo</string>
    <string name="periodo_filtro">19/02/2019 – 20/02/2019</string>
    <string name="_09_03_2019">09/03/2019</string>
    <string name="menor_valor">Menor valor</string>
    <string name="maior_valor">Maior valor</string>
    <string name="data_mais_recente">Data mais recente</string>
    <string name="data_menos_recente">Data menos recente</string>
    <string name="filtros">Filtros</string>
    <string name="card_status_title">Omo DT PO Antibac 9x1.8Kg</string>
    <string name="buscar_por_detalhe">Buscar por detalhe…</string>
    <string name="status_pedido_card_valor">%1$s - %2$s caixas</string>
    <string name="outlook">Outlook</string>
    <string name="outlook_card_title">15:38 | Modelo de teste #2</string>
    <string name="tutorial_page1_title">Agenda do outlook</string>
    <string name="tutorial_page1_description">Agora você pode acessar todos os seus eventos do Outlook com a Júlia! Basta perguntar sobre suas atividades e conferir seus compromissos.</string>
    <string name="tutorial_page2_title">Concluir/Cancelar Atividades da Agenda</string>
    <string name="tutorial_page2_description">O cliente desmarcou? Já fez a reunião? Conclua/Cancele seus eventos com a Júlia (disponível apenas para as atividades da Salesforce, por enquanto).</string>
    <string name="tutorial_page3_title">Busca por Código de Cliente</string>
    <string name="cancelar">Cancelar</string>
    <string name="clientes">Clientes</string>
    <string name="total_de">Total de</string>
    <string name="total_de_pedidos">3219</string>
    <string name="pedidos">pedidos</string>
    <string name="ordenacao">Ordenação:</string>
    <string name="maior_porcent">Maior %</string>
    <string name="menor_porcent">Menor %</string>
    <string name="vendas_em">Vendas em</string>
    <string name="avaliar">Avaliar</string>
    <string name="categorias">Categorias</string>
    <string name="sku_67680026">SKU 67680026</string>
    <string name="knor_cdo_gal_cart_80x6l_114g_prm_12x10">Knor CDO Gal Cart 80x6L/114g PRM 12x10 80x6L/114g PRM 12x10</string>
    <string name="realizado">Realizado</string>
    <string name="_50_25_00">50% (25,00)</string>
    <string name="estimativa">Estimativa</string>
    <string name="_50_00">50,00</string>
    <string name="aplicar">Aplicar</string>
    <string name="commodites">Commodites</string>
    <string name="todas">Todas</string>
    <string name="marcas">Marcas</string>
    <string name="minha_area">Minha área</string>
</resources>