<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_back"/>

    <com.unilever.julia.components.LoadView
        android:id="@+id/loadView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/contentMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.unilever.julia.components.boletim.BoletimFiltroItem
                android:id="@+id/bolAreaAtendimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bolFtTitle="@string/area_de_atendimento"
                app:bolFtSelected="@string/minha_area"/>

            <com.unilever.julia.components.boletim.BoletimFiltroItem
                android:id="@+id/bolCanal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bolFtTitle="@string/canal"
                app:bolFtSelected="@string/todos"/>

            <com.unilever.julia.components.boletim.BoletimFiltroItem
                android:id="@+id/bolClientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bolFtTitle="@string/clientes"
                app:bolFtSelected="@string/todos"/>

            <com.unilever.julia.components.boletim.BoletimFiltroItem
                android:id="@+id/bolCommodites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bolFtTitle="@string/commodites"
                app:bolFtSelected="@string/todos"/>

            <com.unilever.julia.components.boletim.BoletimFiltroItem
                android:id="@+id/bolCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bolFtTitle="@string/categorias"
                app:bolFtSelected="@string/todas"/>

            <com.unilever.julia.components.boletim.BoletimFiltroItem
                android:id="@+id/bolMarcas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bolFtTitle="@string/marcas"
                app:bolFtSelected="@string/todas"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonsBottom.blue"
                android:id="@+id/btnAplicar"
                android:layout_gravity="center_horizontal"
                android:layout_width="135dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top_24dp"
                android:layout_marginBottom="@dimen/margin_bottom_24dp"
                android:text="@string/aplicar"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>