<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingStart="@dimen/margin_start_24dp"
        android:paddingEnd="@dimen/margin_end_24dp"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sku_67680026"
            android:textColor="@color/colorTextGray1"
            android:textSize="14sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/knor_cdo_gal_cart_80x6l_114g_prm_12x10"
            android:textColor="@color/colorTextGray1"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/realizado"
            android:textColor="@color/colorTextGray2"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvScoreEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_50_25_00"
            android:textColor="@color/colorRed"
            android:textSize="12sp"
            android:gravity="end"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLabel1"
            app:layout_constraintTop_toTopOf="@+id/tvLabel1" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="10dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="80"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/bg_progress_ofertas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/estimativa"
            android:textColor="@color/colorTextGray2"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTarget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_50_00"
            android:textColor="@color/colorTextGray2"
            android:textSize="12sp"
            android:gravity="end"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLabel2"
            app:layout_constraintTop_toTopOf="@+id/tvLabel2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_separator_height"
        android:background="@color/colorStrokeGray" />

</LinearLayout>