<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/clientes_filtro_text"
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordenacao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
            android:id="@+id/rbGroupClientesSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView3">

        <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/radio_buttons_horizontal"
                android:checked="true"
                android:id="@+id/radioDesc"
                android:text="@string/maior_porcent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/radio_buttons_horizontal"
                android:id="@+id/radioAsc"
                android:text="@string/menor_porcent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>