<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RadioGroup
            android:id="@+id/rgOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/radio_buttons"
                android:checked="true"
                android:id="@+id/rbtMenorValor"
                android:text="@string/menor_valor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_height"
                android:layout_marginStart="@dimen/radio_button_margin_start"
                android:layout_marginEnd="@dimen/radio_button_margin_end"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/colorStrokeGray"/>

        <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/radio_buttons"
                android:id="@+id/rbtMaiorValor"
                android:text="@string/maior_valor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_height"
                android:layout_marginStart="@dimen/radio_button_margin_start"
                android:layout_marginEnd="@dimen/radio_button_margin_end"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/colorStrokeGray"/>

        <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/radio_buttons"
                android:id="@+id/rbtDtMaisRecente"
                android:text="@string/data_mais_recente"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_height"
                android:layout_marginStart="@dimen/radio_button_margin_start"
                android:layout_marginEnd="@dimen/radio_button_margin_end"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/colorStrokeGray"/>

        <androidx.appcompat.widget.AppCompatRadioButton
                style="@style/radio_buttons"
                android:id="@+id/rbtDtMenosRecente"
                android:text="@string/data_menos_recente"
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_height"
                android:layout_marginStart="@dimen/radio_button_margin_start"
                android:layout_marginEnd="@dimen/radio_button_margin_end"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/colorStrokeGray"/>

    </RadioGroup>

</ScrollView>